--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
     "build": "tsc",
     "postinstall": "npm run build",
-    "test": "NODE_ENV=test mocha --check-leaks \"src/test/**/*.spec.ts\""
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +36,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/jest": "^29.2.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -45,7 +46,8 @@
     "joi": "^17.7.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.7.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-jest": "^29.0.3"
   },
   "_moduleAliases": {
     "@/resources": "dist/resources",
