refactor: mongo docker connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     build: ./
     ports:
       - 3000:3000
+    volumes:
+      - .:/home/node/app
+    links:
+      - mongodb_container
   mongodb_container:
     image: mongo:latest
     environment:
