--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,14 @@
-version: '3.4'
-
+version: "3.4"
 services:
   api:
     build:
       context: .
-      target: production
+      target: development
+    volumes:
+      - ./:/usr/src/app
     ports:
       - 3000:3000
+    command: npm run dev
     links:
       - mongodb
   mongodb:
