--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
-    "build": "tsc",
     "postinstall": "npm run build",
-    "test": "jest"
+    "test": "jest",
+    "dev": "ts-node-dev --poll src/index.ts",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +31,9 @@
     "jest": "^29.3.1",
     "mocha": "^10.1.0",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "supertest": "^6.3.1",
+    "ts-node-dev": "^2.0.0",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.8.4"
   },
@@ -47,7 +49,8 @@
     "module-alias": "^2.2.2",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1"
   },
   "_moduleAliases": {
     "@/resources": "dist/resources",
