refactor: Docker now works properly

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,12 +13,10 @@ services:
       - mongodb
   mongodb:
     image: mongo:latest
+    container_name: mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: rootpassword
+      MONGO_INITDB_DATABASE: docker-db
     ports:
       - 27017:27017
-    volumes:
-      - mongodb_data_container:/data/db
-volumes:
-  mongodb_data_container:
