--- a/package.json
+++ b/package.json
@@ -1,44 +1,15 @@
 {
   "name": "books-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "postinstall": "npm run build",
-    "test": "jest",
-    "dev": "ts-node-dev --poll src/index.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "@types/mocha": "^10.0.0",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.11.9",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "chai": "^4.3.7",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.3.1",
-    "mocha": "^10.1.0",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "supertest": "^6.3.1",
-    "ts-node-dev": "^2.0.0",
-    "tsc-watch": "^5.0.3",
-    "typescript": "^4.8.4"
+    "dev": "ts-node-dev --poll src/index.ts",
+    "docs": "serve -p 5000 ./docs/web",
+    "format": "prettier --write .",
+    "start": "npm run build && node dist/index.js",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts ."
   },
   "dependencies": {
-    "@types/jest": "^29.2.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -49,8 +20,29 @@
     "module-alias": "^2.2.2",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/mocha": "^10.0.0",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "chai": "^4.3.7",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "mocha": "^10.1.0",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "serve": "^14.1.1",
+    "ts-node-dev": "^2.0.0",
+    "tsc-watch": "^5.0.3",
+    "typescript": "^4.8.4"
   },
   "_moduleAliases": {
     "@/resources": "dist/resources",
